--- a/diplom.bib
+++ b/diplom.bib
@@ -317,31 +317,88 @@
 }
 
 %kathi
-@online{symfonyDokumentation,
+@online{apachehttpserver,
+	lastchecked = {2016-03-11},
+	url = {https://httpd.apache.org},
+	title = {Apache HTTP Server}
+}
+
+%kathi
+@online{phpmyadmin,
+	lastchecked = {2016-03-11},
+	url = {https://de.wikipedia.org/wiki/PhpMyAdmin},
+	title = {PhpMyAdmin}
+}
+
+%kathi
+@online{mamp,
+	lastchecked = {2016-03-12},
+	url = {https://de.wikipedia.org/wiki/LAMP_(Softwarepaket)},
+	title = {MAMP}
+}
+
+%kathi
+@online{mamp,
+	lastchecked = {2016-03-12},
+	url = {https://de.wikipedia.org/wiki/LAMP_(Softwarepaket)},
+	title = {MAMP}
+}
+
+%kathi
+@online{doctrine,
+	lastchecked = {2016-02-26},
+	url = {http://doctrine-orm.readthedocs.org/en/latest/tutorials/getting-started.html},
+	title = {Doctrine - Dokumentation}
+}
+
+
+%kathi
+@online{symfony,
 	lastchecked = {2016-02-11},
 	url = {http://symfony.com/doc/2.7/book/index.html},
 	title = {Symfony 2.7 - Dokumentation}
 }
 
 %kathi
-@online{twigDokumentation,
+@online{bower,
+	lastchecked = {2016-02-11},
+	url = {http://bower.io},
+	title = {Bower}
+}
+
+%kathi
+@online{sass,
+	lastchecked = {2016-03-02},
+	url = {https://de.wikipedia.org/wiki/Sass_(Stylesheet-Sprache)},
+	title = {Sass}
+}
+
+%kathi
+@online{gulp,
+	lastchecked = {2016-02-26},
+	url = {https://liechtenecker.at/front-end-workflow-mit-gulp/},
+	title = {Gulp - Tutorial}
+}
+
+%kathi
+@online{twig,
 	lastchecked = {2016-02-26},
 	url = {http://twig.sensiolabs.org/documentation},
 	title = {Twig - Dokumentation}
 }
 
 %kathi
-@online{doctrineDokumentation,
-	lastchecked = {2016-02-26},
-	url = {http://doctrine-orm.readthedocs.org/en/latest/tutorials/getting-started.html},
-	title = {Doctrine - Dokumentation}
+@online{dom,
+	lastchecked = {2016-03-05},
+	url = {https://wiki.selfhtml.org/wiki/JavaScript/DOM},
+	title = {DOM}
 }
 
 %kathi
-@online{gulpTutorial,
-	lastchecked = {2016-02-26},
-	url = {https://liechtenecker.at/front-end-workflow-mit-gulp/},
-	title = {Gulp - Tutorial}
+@online{ajax,
+	lastchecked = {2016-03-05},
+	url = {http://ajax.frozenfox.at},
+	title = {Ajax}
 }
 
 %chrisy
