Kleinigkeiten in Marketing

--- a/Marketing.tex
+++ b/Marketing.tex
@@ -59,7 +59,7 @@ aber auch Marketing-Strategien und deren Anwendung erläutert.
     verkauft wird.
   \end{itemize}
 
-  \subsection{Marketing-Strategie}
+  \subsection{Marketing-Maßnahmen}
   Aus der SWOT-Analyse ging hervor, dass unsere Schwächen großteils darin lagen, unser Projekt nur schwer präsentieren zu können, da das Hauptziel das Entwickeln
   einer Konzeptstudie, keines fertigen Produktes ist. Außerdem ergaben Kostenabschätzungen, dass das Testen der Konzepte einen hohen finanziellen Aufwand mitsich bringen
   würde. Aus diesen beiden Erkenntnissen entstand das Vorhaben, das Projekt sehr aktiv an die Öffentlichkeit zu bringen, um zum Einen zu intensiv Fortschritte im Projekt
@@ -178,8 +178,8 @@ behandelt.
     ersichtlichen Vorteile, die zu Verwendung in diesem Projekt geführt haben, erläutert.
 
     \subsection*{HTML}
-    {Die Hyper Text Markup Language\cite{html}} ist die gängigste Sprache um die Struktur einer Website zu definieren. Sie ist Plattformunabhängig, was bedeutet,
-    dass sie unabhängig vom Betriebsystem eines Geräts interpretiert werden kann. Die Syntax von HTML besteht aus sogenannten Tags, die, nach einem
+    Die {Hyper Text Markup Language\cite{html}} ist eine gängige Sprache um die Struktur einer Website zu definieren. Ein Webbrowser interpretiert
+    HTML und visualisiert dadruch die Website. Die Syntax von HTML besteht aus sogenannten Tags, die, nach einem
     bestimmten Schema aufgebaut, die Struktur einer Website ergeben. Die aktuellste Version ist HTML 5. Diese unterstützt zum Einen das responsive
     Entwickeln einer Website, und verbessert zum Anderen die SEO. Außerdem ist es möglich ohne der Verwendung von Adobe Flash Player Audio und Video einzubinden.
 
@@ -261,6 +261,10 @@ behandelt.
         Die Grundstruktur eines HTML Dokuments besteht aus folgenden Tags:
 
         \textcolor{red}{(BILD HTML BASIC STRUCTURE)}
+
+        Ganz oben im Dokument wird der Dokumenttyp deklariert. Dieser gibt die verwendete HTML Version an. Im Falle von HTML würde dieser wie folgt aussehen:
+
+        (CODE: DOCTYPE HTML5)
 
         Im \textless head \textgreater Bereich werden \textless meta \textgreater Tags angegeben, in denen allgemeine Informationen zur Website, wie Autor oder Keywords und Beschreibung gespeichert werden.
         Letztere zwei sind besonders wichtig, da sie dem Robot mitteilen, um was es auf der Seite geht. Der Robot achtet hierbei auch darauf, dass die Beschreibung nicht
