--- a/Allgemeines.tex
+++ b/Allgemeines.tex
@@ -6,7 +6,7 @@
 \section{Projektidee}
 Die Idee des Projektes, ist die Entwicklung eines innovativen Logistiksystems, das sich durch die Verwendung eines Multicopters auszeichnet.
 Für den Entwicklungsprozess im Zuge der Diplomarbeit wurde der die Gastronomie als Einsatzbereich gewählt. Diese Wahl ermöglich zum Einen
-ein konkreteres Fomulieren der Ziele und zum anderen eine einheitliche Vision innerhalb des Teams.
+ein konkreteres Fomulieren der Ziele und zum Anderen eine einheitliche Vision innerhalb des Teams.
 
 Der innovative Aspekt des Projekts wird insofern abgedeckt, dass die Entwicklung des Systems so durchgeführt wird,
 dass es auch in anderwärtigen Bereichen der Logistik, wie beispielsweise der Lagerverwaltung eingesetzt werden kann.
@@ -20,6 +20,8 @@ Das System setzt sich aus den drei Komponenten
 \end{itemize}
 
 zusammen.
+
+(BILD: Systemblockbild)
 
 Der Multicopter ist die zentrale Komponente des Projekts. Sie ist für den selbstständigen Transport von Objekten zuständig,
 und muss somit flugfähig, und im Stande Unfälle zu verhindern sein.
@@ -101,13 +103,13 @@ Betriebs und wandelt Nutzereingaben in Befehle für den Muticopter um.
   Lucas Ullrich war neben seiner Position als Projektleiter Stellvertreter für die Sensorik an unserer Drohne und
   für die Programmierung der Firmware zuständig. Er unterstützte unseren Projektleiter bei terminlichen Angelegenheiten
   und konnte durch seine Kenntnisse mit der Programmiersprache C eine solide Basis für die Firmware des Microcontrollers schaffen.
-  Außerdem
+  Außerdem verfügte er über das notwendige Wissen und Engagement in der Elektrotechnik, um die Schaltpläne
 
   \subsection*{Christina Bornberg}
   \textbf{Firmware}
 
   Christina Bornberg fungierte als Firmware Entwicklerin des Teams. Durch ihre Interesse an der Programmierung von Drohnen
-  und bereits gesammelten Erfahrung mit der Programmierung von C konnte sie gemeinsam mit Lucas Ullrich die LOgik hinter
+  und bereits gesammelten Erfahrung mit der Programmierung von C konnte sie gemeinsam mit Lucas Ullrich die Logik hinter
   dem automatisierten Flug der Drohne realisieren.
 
   \subsection*{Katharina Joksch}
@@ -141,7 +143,7 @@ Betriebs und wandelt Nutzereingaben in Befehle für den Muticopter um.
   DI August Hörandl fungierte als Individualbetreuer von Christina Bornberg. Duch seine Fähigkeiten und
   Erfahungen als Programmierer sowohl mit der Sprache C, als auch Java war das Entwickeln der Firmware,
   aber auch der Java-Applikation für die WLAN-Kommunikation wesentlich einfacher. Außerdem war
-  DI August Hörandl unser Ansprechpartner wenn es Unklarheiten bei LaTeX gab.
+  DI August Hörandl unser Ansprechpartner wenn es Unklarheiten bei \LaTeX gab.
 
   \subsection*{MMag. Florian Weiss}
   MMag. Florian Weiss betreute Katharina Joksch bei der Entwicklung der digitalen Speisekarte. Sein umfangreiches
@@ -171,7 +173,7 @@ ein professionelles, projektbegleitendes Team-Coaching, inklusive Zertifikat.
 
 \subsection*{EVOtech GmbH}
 Dank der Firma {EVOtech\cite{evotech}} war es möglich additive Module für den Hexacopter selbst anzufertigen.
-Das gesamten Material, welches für den 3D-Druck benötigte wurde gesponsert.
+Das gesamten Material, welches für den 3D-Druck benötigte wurde, wurde gesponsert.
 
 \subsection*{LivingPhotos}
 LivingPhotos ermöglichte uns, unsere Internetauftritte durch professionelle Teamfotos und Portraits aufzuwerten.
