--- a/Mechanik.tex
+++ b/Mechanik.tex
@@ -14,7 +14,7 @@
 		Diese ist kostengünstig \bzw genau genug für Teile. Wie der Name schon sagt, wird Material in einem Druckkopf geschmolzen und dann Schicht für Schicht auf der Druckplatte aufgetragen.
 		Der Druckkopf fährt nur in X- und Y- Richtung, die Höhe wird mit die Druckplatte selbst eingestellt.
 
-		Meist werden Drucker über einen Maschinencode gesteuert, den sogenannten „G-Code“. In diesem Code werden die Punkte (Koordinaten) definiert, die der Extruder (Druckkopf) abfahren muss.
+		Meist werden Drucker über einen Maschinencode gesteuert, den sogenannten “G-Code“. In diesem Code werden die Punkte (Koordinaten) definiert, die der Extruder (Druckkopf) abfahren muss.
 		Die folgende Abbildung zeigt ein Beispiel eines Maschinencodes.
 
 			\begin{figure}[tbh]
@@ -45,7 +45,7 @@
 		Ist der Druckraum offen, kühlt das Werkstück außen schneller ab, kühles Material zieht sich zusammen, daher biegt sich das Material am Rand auf.
 
 		Manchmal ist es unumgeänglich, ein Teil so drucken zu lassen, dass es nicht komplett auf der Druckplatte aufliegt zum Beispiel ein Steg,
-		der „in der Luft“ liegt oder eine Bohrung im Werkstück, die horizontal gedruckt werden muss.
+		der “in der Luft“ liegt oder eine Bohrung im Werkstück, die horizontal gedruckt werden muss.
 		In solchen Fällen, druckt der Drucker unter diesem Steg Stützmaterial. Basierend auf diesem Stützmaterial, wird dann die gewünschte Form gedruckt.
 		Das Stützmaterial ist so strukturiert, dass man es leicht entfernen kann, ohne Rückstände zu hinterlassen.
 
@@ -298,7 +298,7 @@ Der gesamte Rotorschutz konnte dann mittels der vorgesehenen Schrauben an der Ce
 	Die Nut ist so groß dimensioniert worden, dass sie leicht auf die Platte geschoben werden kann, sich aber nur minimal bewegen lässt.
 
 	Der zweite Teil der Halterung wurde so konstruiert, dass die vier Ecken der Sensorplatine gleichmäßig aufliegen können.
-	Auf dem Ultraschallsensor selbst befinden sich jedoch vier Anschlussstifte, die es nicht ermöglichen, die Platine direkt auf der „Gabel“ zu befestigen.
+	Auf dem Ultraschallsensor selbst befinden sich jedoch vier Anschlussstifte, die es nicht ermöglichen, die Platine direkt auf der “Gabel“ zu befestigen.
 	Um Kabel trotzdem problemlos anschließen zu können, wurde der Sensor mittels vier Stutzen 5 mm höher gelegt.
 
 	Geplant wurde, dass der Sensor an den Stutzen mit vier Blechschrauben befestigt wird, die Durchmesser der Bohrungen sind aber so klein, dass keine gängigen Schraubendurchmesser verwendet werden können.
@@ -360,9 +360,10 @@ Der gesamte Rotorschutz konnte dann mittels der vorgesehenen Schrauben an der Ce
 			\label{auswahl_creo}
 			\end{figure}
 
-	Unter dem Menü „Verschiebung“ wird die gewünschte Lagerung definiert, man kann eine Fläche, einen Punkt oder eine Kante auswählen,
+	Unter dem Menü “Verschiebung“ wird die gewünschte Lagerung definiert, man kann eine Fläche, einen Punkt oder eine Kante auswählen,
 	je nachdem wie das Prüfwerkstück gelagert werden soll und in welche Richtung dieses verschiebbar ist.
-	In dem Menü „Kraft/Moment“ gibt man dann an welche Belastung, in welcher Fläche, Punkt oder Kante auf das Werkstück wirkt. Der Auswahlpunkt „Analysen und Studien“ startet die Simulation.
+	In dem Menü “Kraft/Moment“ gibt man dann an welche Belastung, in welcher Fläche, Punkt oder Kante auf das Werkstück wirkt.
+	Der Auswahlpunkt “Analysen und Studien“ startet die Simulation.
 
 	Der Sensor wird so montiert, dass er die Halterung nach unten zieht, die Folge ist, dass sich die Halterung, grob angenommen,
 	mit zwei Kanten an der Platte verkeilt (siehe Abbildung \ref{lager_darstellung_1} und \ref{lager_darstellung_2}).
@@ -471,11 +472,11 @@ Der gesamte Rotorschutz konnte dann mittels der vorgesehenen Schrauben an der Ce
 
 	Abbildung \ref{spannungsverteilung_ohne_kerbe} zeigt die Spannungsverteilung in einem Zug,- \bzw Biegestab ohne Querschnittsbeeinflussungen.
 	Im Vergleich dazu wird in der Abbildung \ref{spannungsverteilung_mit_kerbe}, die Spannungsverteilung mit dem Einfluss einer Kerbe dargestellt.
-	Für weitere Erklärungen wird der erste Stab „A“ und der zweite „B“ genannt.
+	Für weitere Erklärungen wird der erste Stab “A“ und der zweite “B“ genannt.
 
-	Beansprucht man „A“ mit einer Kraft oder einem Moment, verteilt sich die Spannung gleichmäßig über das Werkstück.
-	Wird „B“, auf Zug oder Biegung beansprucht, kann man erkennen, dass sich die Spannung nur unter dem Kerbengrund verteilt.
-	Die Spannung „A“ wird in der Regel mit $\sigma_{n}$ bezeichnet und die maximale Spannung in „B“ mit $\sigma_{max}$.
+	Beansprucht man “A“ mit einer Kraft oder einem Moment, verteilt sich die Spannung gleichmäßig über das Werkstück.
+	Wird “B“, auf Zug oder Biegung beansprucht, kann man erkennen, dass sich die Spannung nur unter dem Kerbengrund verteilt.
+	Die Spannung “A“ wird in der Regel mit $\sigma_{n}$ bezeichnet und die maximale Spannung in “B“ mit $\sigma_{max}$.
 	Bildet man die Division zwischen $\sigma_{n}$ und $\sigma_{max}$, erhält man die Formzahl $\alpha_{k}$.
 	$\alpha_{k}$ kann niemals kleiner als 1 werden, das würde bedeuten, dass die Kerbe als Stärkung des Querschnitts gelten würde.
 
