paar sachen umändern, hoffe es gibt keinen merge :/

--- a/Allgemeines.tex
+++ b/Allgemeines.tex
@@ -5,7 +5,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Projektidee}
 Die Idee des Projektes, ist die Entwicklung eines innovativen Logistiksystems, das sich durch die Verwendung eines Multicopters auszeichnet.
-Für den Entwicklungsprozess im Zuge der Diplomarbeit wurde der die Gastronomie als Einsatzbereich gewählt. Diese Wahl ermöglich zum Einen
+Für den Entwicklungsprozess im Zuge der Diplomarbeit wurde die Gastronomie als Einsatzbereich gewählt. Diese Wahl ermöglich zum Einen
 ein konkreteres Fomulieren der Ziele und zum anderen eine einheitliche Vision innerhalb des Teams.
 
 Der innovative Aspekt des Projekts wird insofern abgedeckt, dass die Entwicklung des Systems so durchgeführt wird,
@@ -33,16 +33,16 @@ Betriebs und wandelt Nutzereingaben in Befehle für den Muticopter um.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Ausgangssituation}
-  Im den folgenden Absätzen wird beschrieben, wie die Idee von Hovering Steward, dem autonom fliegenden Kellner
+  In den folgenden Absätzen wird beschrieben, wie die Idee von Hovering Steward, dem autonom fliegenden Kellner
   entstanden ist, und womit sich die ersten Recherchen zu Begin des Projektes beschäftigt, beziehungsweise
   welche Ergebnisse diese herausgebracht haben.
 
   \subsection{Ideenfindung}
-  Ihren Anfang fand die Idee im Projektmanagement Unterricht. Die Teams mussten ein fiktives Projekt erfinden, um auf Basis dieses
+  Ihren Anfang fand die Idee im Projektmanagement Unterricht. Klasseninterne Teams mussten ein fiktives Projekt erfinden, um auf Basis dieses
   Projektmanagementpläne zu erstellen. Es entstand "Fluorescent Bakery", eine Bäckerei, die fluoreszierende Cupcakes verkauft.
   Der technische Teil ergab sich später, bei dem Gedanken diese Idee für die Diplomarbeit weiterzuverwenden. Der Ansatz hierfür war,
   einen nicht menschlichen Kellner zu erschaffen, der mithilife künstlicher Intelligenz die Aufgaben einer Bedienung in einem Restaurant übernimmt.
-  Einen Kellner auf Rädern erschien zu simpel, daher wurde die Entscheidung getroffen, die 3. Dimension mit einzubeziehen und ihn fliegen zu lassen.
+  Ein Kellner auf Rädern erschien zu simpel, daher wurde die Entscheidung getroffen, die 3. Dimension mit einzubeziehen und ihn fliegen zu lassen.
   So entstand "Hovering Steward - der autonom fliegende Kellner", ein dreidimensionales Tracking-System, welches eine Drohne in einem Raum die Aufgaben eines Kellners durchführen lässt.
   Das Projekt erhielt später noch eine weitere Komponente, nämlich eine digitale Speisekarte, um das System in einem Restaurant vollständig zu automatisieren.
 
@@ -107,7 +107,7 @@ Betriebs und wandelt Nutzereingaben in Befehle für den Muticopter um.
   \textbf{Firmware}
 
   Christina Bornberg fungierte als Firmware Entwicklerin des Teams. Durch ihre Interesse an der Programmierung von Drohnen
-  und bereits gesammelten Erfahrung mit der Programmierung von C konnte sie gemeinsam mit Lucas Ullrich die LOgik hinter
+  und bereits gesammelten Erfahrung mit der Programmierung von C konnte sie gemeinsam mit Lucas Ullrich die Logik hinter
   dem automatisierten Flug der Drohne realisieren.
 
   \subsection*{Katharina Joksch}
@@ -312,7 +312,7 @@ zweier Projektmanagement-Methoden und der Wahl der Methode für diese Diplomarbe
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Teammanagement / Teambuilding}
 Da sich das Team aus sowohl aus Schülern verschiedener Klassen, aber auch Fachrichtungen
-zusammensetzte war Teambuilding ein primärer Teil des Managements. Das Projekt bestand außerdem
+zusammensetzte war Teambuilding ein wichtiger Teil des Managements. Das Projekt bestand außerdem
 aus Komponenten, die sich stark voneinader unterschieden, jedoch gut zusammenarbeiten mussten.
 
   \subsection{KaTeCos}
@@ -326,9 +326,9 @@ aus Komponenten, die sich stark voneinader unterschieden, jedoch gut zusammenarb
   für jedes Teammitglied festlegte.
   \begin{itemize}
     \item Wenn eine Deadline voraussichtlich nicht erfüllt werden kann, wird dem gesamten Team so früh wie möglich Bescheid gegeben.
-    \item Ehrlichkeit und Offenheit gegenüber jedem Teammitglied
-    \item Entscheidungen werden nicht nur vom Projektleiter, sondern vom gesamten Team getroffen
-    \item Jedes Team hat immer Zugriff auf projektinterne Dateien und Informationen
+    \item Ehrlichkeit und Offenheit gegenüber jedem Teammitglied.
+    \item Entscheidungen werden nicht nur vom Projektleiter, sondern vom gesamten Team getroffen.
+    \item Jedes Teammitglied hat immer Zugriff auf projektinterne Dateien und Informationen.
     \item Wichtige e-Mails sind zuerst vom gesamten Team abzusegnen, bevor sie verschickt werden.
-    \item Probleme werden nicht als Hindernis, sondern als Chance gesehen
+    \item Probleme werden nicht als Hindernis, sondern als Chance gesehen.
   \end{itemize}
