XAMPP Verweis hinzugefügt

--- a/diplom.bib
+++ b/diplom.bib
@@ -331,10 +331,10 @@
 }
 
 %kathi
-@online{mamp,
-	lastchecked = {2016-03-12},
-	url = {https://de.wikipedia.org/wiki/LAMP_(Softwarepaket)},
-	title = {MAMP}
+@online{xampp,
+	lastchecked = {2016-03-28},
+	url = {https://de.wikipedia.org/wiki/XAMPP},
+	title = {XAMPP}
 }
 
 %kathi
