mamp verweis geändert

--- a/diplom.bib
+++ b/diplom.bib
@@ -325,8 +325,8 @@
 
 %kathi
 @online{mamp,
-	lastchecked = {2016-03-12},
-	url = {https://de.wikipedia.org/wiki/LAMP_(Softwarepaket)},
+	lastchecked = {2016-03-28},
+	url = {https://www.mamp.info/de/},
 	title = {MAMP}
 }
 
