--- a/diplom.bib
+++ b/diplom.bib
@@ -338,6 +338,13 @@
 }
 
 %kathi
+@online{gnu,
+	lastchecked = {2016-03-28},
+	url = {https://de.wikipedia.org/wiki/GNU_General_Public_License},
+	title = {GNU}
+}
+
+%kathi
 @online{doctrine,
 	lastchecked = {2016-02-26},
 	url = {http://doctrine-orm.readthedocs.org/en/latest/tutorials/getting-started.html},
