--- a/diplom.bib
+++ b/diplom.bib
@@ -345,12 +345,25 @@
 }
 
 %kathi
+@online{python,
+	lastchecked = {2016-03-28},
+	url = {http://www.pythonmania.de/article/warum.html},
+	title = {Python}
+}
+
+%kathi
+@online{perl,
+	lastchecked = {2016-03-28},
+	url = {https://de.wikipedia.org/wiki/Perl_(Programmiersprache)},
+	title = {Perl}
+}
+
+%kathi
 @online{doctrine,
 	lastchecked = {2016-02-26},
 	url = {http://doctrine-orm.readthedocs.org/en/latest/tutorials/getting-started.html},
 	title = {Doctrine - Dokumentation}
 }
-
 
 %kathi
 @online{symfony,
