--- a/Kommunikation_Applikation_und_Hexacopter.tex
+++ b/Kommunikation_Applikation_und_Hexacopter.tex
@@ -6,7 +6,7 @@ abdecken. Über diese werden anschließend die diversen Daten übertragen, dazu 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Allgemeine technische Planung}
-In der Planung wurde eine unkomplizierte und verlässliche Lösung für beide Kommunikationspartner gesucht. Da Bluetooth kaum noch standardmäßig verbaut wird hier wiederum
+In der Planung wurde eine unkomplizierte und verlässliche Lösung für beide Kommunikationspartner gesucht. Da Bluetooth kaum noch standardmäßig verbaut ist, wird hier wiederum
 Serverseitig eine externe Hardware benötigt, um dies zu vermeiden wurde WLAN ins Auge gefasst.
 
 WLAN stellte sich folglich als ideale Schnittstelle heraus,
@@ -88,9 +88,9 @@ Seitens des Hexacopters wird ein zusätzliches Modul benötigt, dieses muss übe
 \section{Schnittstelle Applikation}
 
   \subsection{Technische Planung}
-  
+
       \subsubsection{Eclipse}
-    
+
 Eclipse ist eine freie Entwicklungsumgebung für Programme und wurde von der Eclipse Foundation entwickelt. Das Programm kann verwendet werden, um in mehreren Programmiersprachen Software zu entwicklen. Besonders gut geeignet ist Eclipse für die Entwicklung von Java-Programmen, da es sowohl Auto-Completion ermöglicht als auch Syntax- Highlighting.
 
 	   \subsubsection{JDBC}
@@ -112,10 +112,10 @@ Für die Umsetzung des Javaprogramms wurden drei verschiedene Klassen erstellt:
 \begin{itemize}
     \item \textbf{SQL Reader}\\
 Diese Klasse wurde dazu programmiert, alle Datenbankzugriffe zu regeln.
-Um den Zugriff auf Datenbanken zu bewerkstelligen wurde JDBC verwendet. 
+Um den Zugriff auf Datenbanken zu bewerkstelligen wurde JDBC verwendet.
 Damit das Programm mit JDBC arbeiten kann muss man es erst einmal von Oracle downloaden und anschließend mit einem Rechtsklick auf das Javaprojekt unter dem Menüpunkt "Properties" als Bibliothek angeben.
 Wie auch bei Doctrine müssen der Datenbank Host, der Datenbank Port und die Benutzerdaten angegeben werden, damit die Verbindung hergestellt werden kann.
-Als Treiber wird hier jedoch statt MySQL auf JDBC verwiesen. 
+Als Treiber wird hier jedoch statt MySQL auf JDBC verwiesen.
 Um die Verbindung herzustellen wurde auf die Funktion DriverManager.getConnection() aufgerufen. Als Parameter musste ihr der Pfad zur Datenbank und die Benutzerdaten mitgeschickt werden.
 \\
 Damit die Tischdaten angezeigt werden konnten, wurde die "showTischdaten()"-Funktion erstellt. Um die ID, die Tischroute und die Tischnummer zu erhalten musste jeweils ein SQL-Statement, welches die Tischdaten ausliest, denen die Bestellung zugewiesen ist, verfasst werden, welches anschließend ausgeführt wurde.
@@ -123,17 +123,17 @@ Die Ergebnisse wurden in ein ResultSet gespeichert. Danach wurden sie in einer S
 \\
 Um in einer extra Datenbanktabelle den Verbindungsstatus zwischen dem Hexacopter und dem Server überprüfen zu können, wurde bei jeder Statusänderung die "erstelleDBEintrag()"-Funktion aufgerufen. Das Einfügen von Datenbankeinträgen kann mit einem Insert-Statement erledigt werden. Dieses muss im Anschluss ebenfalls mit der "executeUpdate()"-Methode durchgeführt werden.
     \item \textbf{Komm Manager}\\
-Um die Threads zu managen wurde eine die "Komm Manager" Klasse programmiert.
-Damit diese Klasse die Funktionen der "SQL Reader"-Klasse verwenden kann, erbt sie von dieser. Dies wird ganz oben bei der Klassendefinierung mithilfe dem Befehl "extends" gehandhabt. 
-Als globale Variable wird ein Hashset, welches die Teilnehmer beeinhaltet, erstellt. 
+Um die Threads zu managen wurde die "Komm Manager" Klasse programmiert.
+Damit diese Klasse die Funktionen der "SQL Reader"-Klasse verwenden kann, erbt sie von dieser. Dies wird ganz oben bei der Klassendefinierung mithilfe des Befehls "extends" gehandhabt.
+Als globale Variable wird ein Hashset, welches die Teilnehmer beeinhaltet, erstellt.
 Anschließend wird ein Server Socket erstellt, welchem später ein geeigneter Port zugewiesen wurde.
 Mithilfe eines Timers wird regelmäßig überprüft ob ein Teilnehmer vorhanden ist. Wenn das der Fall ist, wird auf eine  Methode verwiesen, in welcher die Verbindung hergestellt wird und daher auch die SQl Readerfunktion aufgerufen wird, welche den Verbindungsstatus erneuert. Außerdem bekommt der Teilnehmer daraufhin durchgehend eine Nachricht zugeschickt.
 Um zu überprüfen ob der Hexacopter in der Basis ist und somit bereit dazu ist eine Speise auszuliefern, wartet der Server darauf, dass eine bestimmte Nachricht geschickt wird. Sobald diese bestimmte Nachricht ankommt, liefert die Funktion "true" zurück.
     \item \textbf{Komm Teilnehmer}\\
 Die "Komm Teilnehmer" Klasse wurde dafür entwickelt, die einzelnen Verbindungen zum Hexacopter zu verwalten.
-Dem Teilnehmer Thread wird sowohl der Manager als auch der Server Socket als Parameter mitgeliefert. Über diese kann im Anschluss das Senden und Empfangen der Nachrichten geregelt werden. 
+Dem Teilnehmer Thread wird sowohl der Manager als auch der Server Socket als Parameter mitgeliefert. Über diese kann im Anschluss das Senden und Empfangen der Nachrichten geregelt werden.
 In dieser Klasse wird die Nachricht des Hexacopters an die Manager Funktion geschickt, welche überprüft ob die Nachricht aussagt, dass sich der Multicopter in der Basis befindet. Wenn das der Fall ist, wird automatisch die Tischnummer der auszuliefernden Bestellung an den Teilnehmer geschickt.
   \end{itemize}
 
   \subsection{Herausforderungen und Lösungen}
-Hierbei kam ab und zu das Problem auf, dass bei den SQL-Statements vergessen wurde einen Zeilenabstand zu machen nachdem eine Variable eingebunden wurde. Dies waren jedoch nur kleine Fehler die in der Eile entstanden und relativ schnell erörtert und ausgebessert werden konnten.
+Hierbei kam ab und zu das Problem auf, dass bei den SQL-Statements vergessen wurde einen Zeilenabstand zu machen, nachdem eine Variable eingebunden wurde. Dies waren jedoch nur kleine Fehler, die in der Eile entstanden und relativ schnell erörtert und ausgebessert werden konnten.
